# bevy-jam-2022

./: .gitignore  Cargo.toml  build_wasm.sh  package_wasm.sh  run_wasm.sh
.github/workflows/: ci.yaml  release.yaml
assets-dev/: background-forest-2.pdn  background-forest.pdn  cover.pdn  creepy-enemy.pdn  gate.pdn  player-single.pdn  player-staff.pdn  player-staff2.pdn  player.pdn  spiky-enemy.pdn
assets-dev/ui/: message-panel.pdn  spell-slot-1.pdn  spell-slot-2.pdn  spell-slot-3.pdn  spell-slot-4.pdn  spell-slot-e.pdn  spell-slot-q.pdn  split-5-health-bar.pdn  split-7-mana-bar.pdn
assets-pdn/: player-single.pdn  player.pdn
assets/shaders/: palletization.wgsl
scripts/: spritesheet_extend.py  update_spritesheets.py
src/: enemy.rs  levels.rs  main.rs  palletize.rs  physics.rs  player.rs  spells.rs  sprite.rs  ui.rs
wasm/: index.html
